@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-01-14T08:07:30Z",
-  "count_outdated" : 216,
-  "uniques_outdated" : 152,
+  "timestamp" : "2024-01-14T16:06:28Z",
+  "count_outdated" : 217,
+  "uniques_outdated" : 153,
   "count" : 226,
   "uniques" : 161,
   "clones" : [
-    {
-      "timestamp": "2023-12-31T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-01-01T00:00:00Z",
       "count": 2,
